# docs/swagger.yaml
@@ -4404,22 +4404,6 @@ paths:
           description: OK
       tags:
       - Auth
-  /o/token-http:
-    post:
-      parameters:
-      - description: Login Request
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.LoginDto'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-      tags:
-      - Auth
 securityDefinitions:
   BearerAuth:
     description: Type "Bearer" followed by a space and JWT token.
